# dominion-setup

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: api.md  cli.md  conf.py
src/dominion_setup/: __init__.py  __main__.py  cli.py  generator.py  loader.py  models.py  utils.py
src/dominion_setup/data/cards/: adventures.json  alchemy.json  allies.json  base.json  cornucopia_guilds.json  dark_ages.json  empires.json  hinterlands.json  intrigue.json  menagerie.json  nocturne.json  plunder.json  promo.json  prosperity.json  renaissance.json  rising_sun.json  seaside.json
tests/: __init__.py  conftest.py  smoke_test.py  test_cli.py  test_generator.py  test_loader.py  test_models.py
